--- a/unit08A/unit08A.html
+++ b/unit08A/unit08A.html
@@ -1,7 +1,7 @@
 <body>
   <div style='width: 100%; display: flex; justify-content: center; flex-direction: column'>
     <h1>Pick a picture</h1>
-    <form method='GET' action='unit08.php' style='display: flex; width: fit-content; flex-direction: column'>
+    <form method='GET' action='unit08a.php' style='display: flex; width: fit-content; flex-direction: column'>
       <div style='display: flex'>
         <div style='width: 100px;'>
           <p>Dog</p>
